Fixed page overflow ✌

--- a/style.css
+++ b/style.css
@@ -3,16 +3,20 @@
     padding:0;
 }
 .main{
-    border-style: solid;
-    height: 100vh;
+    position: absolute;
+    top:0;
+    bottom: 0;
+    overflow: auto;
     width: 100%;
     background-image: url("hh.jpg");
     background-position: center;
     background-size:cover;
 }
 .content{
-    top:50%;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-top: 20vh;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: #fff;
@@ -26,7 +30,8 @@
 .content p{
     margin:20px auto;
     font-size: 25px;
-    font-weight: 100;
+    font-weight:500;
+    padding-left: 3%;
     line-height: 25px;
 }
 
